--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 - zmen private key a tak na firebase nez s tim pudes ven!
-- loading ikona a disable submit na new article form
+- loading ikona a disable submit kdyz se nahrava obrazek na server na new article form
 - BARVA kocky!, popis, odmena a dalsi pripadny pole na new article form
 - mazat dovolit jenom fajly ktery vytvoril current user (mluvim o fotce kocky ;)
