--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@
 - mazat dovolit jenom fajly ktery vytvoril current user (mluvim o fotce kocky ;)
 - prepis to menu v topbaru na MenuList - to je lip pozicovany
 - napsat firestore indexy do json - ted sou naklikany v ui, ale to by sem to musel klikat znova pro hafbook
+- nak nam to nefunguje breedId a regionId chci aby byly number ale ted sou string
