--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,5 @@
 - prepis to menu v topbaru na MenuList - to je lip pozicovany
 - napsat firestore indexy do json - ted sou naklikany v ui, ale to by sem to musel klikat znova pro hafbook
 - nak nam to nefunguje breedId a regionId chci aby byly number ale ted sou string
+
+- chybi udelat connect na ty kontenjnery zasrany :-D
