article deletion works!

--- a/todo.txt
+++ b/todo.txt
@@ -3,5 +3,5 @@
 - napsat firestore indexy do json - ted sou naklikany v ui, ale to by sem to musel klikat znova pro hafbook
 - po pridani inzeratu ho pridat do ty query a presmerovat "nekam"
 - az budes delat favorities tak nezapomen pridat vymazani ty subkolekce do deleteArticle - firestore pri delete NEMAZE subkolekce
-- chces nak propojit a votestovat to mazani articlu
 - kdyz nahrajes obrazek a je vetsi nez 3MB tak ti to nedovoli nahrat novej
+- kdyz pridas inzerat tak je ho potreba vlozit do cache na MyProfile pokud uz nejaka je
