--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,5 @@
 - napsat firestore indexy do json - ted sou naklikany v ui, ale to by sem to musel klikat znova pro hafbook
 - az budes delat favorities tak nezapomen pridat vymazani ty subkolekce do deleteArticle - firestore pri delete NEMAZE subkolekce
 - nakej automatickej resize na obrazky vetsi nez 3MB
+
+- votestovat a dodelat lajkovani
