conversations starter - not working

--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,6 @@
 - napsat firestore indexy do json - ted sou naklikany v ui, ale to by sem to musel klikat znova pro hafbook
 - az budes delat favorities tak nezapomen pridat vymazani ty subkolekce do deleteArticle - firestore pri delete NEMAZE subkolekce
 - nakej automatickej resize na obrazky vetsi nez 3MB
+- popremejslet jestli nekery veci nedelat optimistic (treba klik na like)
 
 - kdyz se zmensi screen tak nejsou videt buttonky v topbaru - asi bude potreba naky menu nebo neco
